# karaoke_extractor

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release-wheel.yml
src/karaoke_extractor/: cli.py
